ZFIN-8216 conert HibernateAntibodyRepository